[package]
name = "rust-workflow-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["sqlite"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
cron = "0.6"
lapin = "1.6"
log = "0.4"
env_logger = "0.10"